Fix desktop grid without present windows mode

Effect was not marked as active.
BUG: 282461
FIXED-IN: 4.8.0